--- a/PianoDiProgetto/sections/obs.tex
+++ b/PianoDiProgetto/sections/obs.tex
@@ -1,5 +1,12 @@
 L\textquoteright{}Organizational Breakdown Structure, abbreviata in OBS, \`{e} una scomposizione gerarchica delle responsabilit\`{a} che rappresenta l\textquoteright{}organizzazione del progetto. Viene generata allo scopo di individuare univocamente i responsabili o gli esecutori dei WP e migliorare il fusso di comunicazioni del progetto. Il diagramma che segue ha lo scopo di identificare chiaramente i ruoli principali all\textquoteright{}interno del progetto.
 
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.5]{img/Progetto2.jpg}
+\caption{Diagramma OBS}
+\label{fig:Diagramma OBS}
+\end{figure}
+
 \subsubsection{Project manager}
 Responsabile ultimo del completamento del progetto, i suoi obblighi comprendono:
 \begin{itemize}
