--- a/PianoDiProgetto/sections/temporale.tex
+++ b/PianoDiProgetto/sections/temporale.tex
@@ -45,7 +45,7 @@ dare una visione delle dipendenze tra le varie fasi, consentendo di comprendere:
 \end{itemize}
 Di seguito sono presentate le immagini dei work package, ossia delle macro-attivit\'a in cui
 \'e stato suddiviso il progetto, il diagramma di Gantt dell'intero progetto.
-Il progetto risulta quindi avere un costo di \euro{}, a cui si dovranno andare a
+Il progetto risulta quindi avere un costo di 22715 \euro{}, a cui si dovranno andare a
 sommare i costi di mantenimento e hosting del servizio.
 
 \begin{figure}[H]
@@ -84,6 +84,13 @@ sommare i costi di mantenimento e hosting del servizio.
 \end{longtable}
 \end{center}
 
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.4]{img/Definizione Concept.png}
+\caption{Grafico Definizione Concept}
+\label{fig:Grafico Definizione Concept}
+\end{figure}
+
 \paragraph{Studio fattibilit\`{a} (1.2)}
 
 \begin{center}
@@ -103,6 +110,13 @@ sommare i costi di mantenimento e hosting del servizio.
 \end{longtable}
 \end{center}
 
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.4]{img/Studio Fattibilita.png}
+\caption{GraficoStudio Fattibilita}
+\label{fig:Grafico Studio Fattibilita}
+\end{figure}
+
 \paragraph{Pianificazione (1.3)}
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
@@ -119,6 +133,13 @@ sommare i costi di mantenimento e hosting del servizio.
       \hline
 \end{longtable}
 \end{center}
+
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.4]{img/Pianificazione.png}
+\caption{Grafico Pianificazione}
+\label{fig:Grafico Pianificazione}
+\end{figure}
 
 \paragraph{Analisi e progettazione (1.4)}
 
@@ -141,6 +162,13 @@ sommare i costi di mantenimento e hosting del servizio.
 \end{longtable}
 \end{center}
 
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.4]{img/Analisi Progettazione.png}
+\caption{Grafico Analisi Progettazione}
+\label{fig:Grafico Analisi Progettazione}
+\end{figure}
+
 \paragraph{Sviluppo (1.5)}
 
 \begin{center}
@@ -156,6 +184,13 @@ sommare i costi di mantenimento e hosting del servizio.
 		Realizzazione componenti & 04/09/2013 & 02/10/2013 & 21 & 6755 \tabularnewline \hline
 \end{longtable}
 \end{center}
+
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.4]{img/Sviluppo.png}
+\caption{Grafico Sviluppo}
+\label{fig:Grafico Sviluppo}
+\end{figure}
 
 \paragraph{Test (1.6)}
 
@@ -175,6 +210,13 @@ Collaudo finale & 16/10/2013 & 16/10/2013 & 1 & 315 \tabularnewline \hline
 \end{longtable}
 \end{center}
 
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.4]{img/Test.png}
+\caption{Grafico Test}
+\label{fig:Grafico Test}
+\end{figure}
+
 \paragraph{Post vendita (1.7)}
 
 \begin{center}
@@ -191,6 +233,13 @@ Collaudo finale & 16/10/2013 & 16/10/2013 & 1 & 315 \tabularnewline \hline
 \end{longtable}
 \end{center}
 
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.4]{img/Post Vendita.png}
+\caption{Grafico Post Vendita}
+\label{fig:Grafico Post Vendita}
+\end{figure}
+
 \paragraph{Commercializzazione (1.8)}
 
 \begin{center}
@@ -206,3 +255,10 @@ Collaudo finale & 16/10/2013 & 16/10/2013 & 1 & 315 \tabularnewline \hline
 		Assistenza e Manutenzione & 23/10/2013 & 23/10/2013 & 1 & 315 \tabularnewline \hline
 \end{longtable}
 \end{center}
+
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.4]{img/Commercializzazione.png}
+\caption{Grafico Commercializzazione}
+\label{fig:Grafico Commercializzazione}
+\end{figure}
