--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -1,53 +1,60 @@
-La Work BreakDown Structure, d'ora in poi WBS, rappresenta l'insieme delle attività necessarie a svolgere un compito ben preciso o un processo. Le singole attività prendono il nome di Work Package, WP, e definiscono dettagliatamente le azioni da svolgere per
+La Work BreakDown Structure, d'ora in poi WBS, rappresenta l'insieme delle attivit\`{a} necessarie a svolgere un compito ben preciso o un processo. Le singole attivit\`{a} prendono il nome di Work Package, WP, e definiscono dettagliatamente le azioni da svolgere per
 ciascuna di esse.\\
-La WBS è costituita da una struttura ad albero di WP che, a partire dell'obiettivo finale del progetto, specifica per suddivisioni successive i singoli sotto-obiettivi, fino all'unità minima di attività.\\
-Tale scomposizione in tanti compiti di dimensioni limitate facilita la gestione, il controllo e l'assegnazione delle singole attività, consentendo una migliore suddivisione del lavoro.\\
-Grazie alla WBS il project manager può, in maniera semplificata, organizzare tutte le attività che compongono il progetto, così come i WP, ed avere sempre a disposizione un utile strumento che definisce tutti i passi necessari alla buona realizzazione del progetto.\\
-La WBS, inoltre, risulta essere la base per tutte le altre attività di pianificazione richieste per la realizzazione di un progetto di successo.
+La WBS \`{e} costituita da una struttura ad albero di WP che, a partire dell'obiettivo finale del progetto, specifica per suddivisioni successive i singoli sotto-obiettivi, fino all'unit\`{a} minima di attivit\`{a}.\\
+Tale scomposizione in tanti compiti di dimensioni limitate facilita la gestione, il controllo e l'assegnazione delle singole attivit\`{a}, consentendo una migliore suddivisione del lavoro.\\
+Grazie alla WBS il project manager pu\`{o}, in maniera semplificata, organizzare tutte le attivit\`{a} che compongono il progetto, cos\`{i} come i WP, ed avere sempre a disposizione un utile strumento che definisce tutti i passi necessari alla buona realizzazione del progetto.\\
+La WBS, inoltre, risulta essere la base per tutte le altre attivit\`{a} di pianificazione richieste per la realizzazione di un progetto di successo.
+
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.5]{img/Progetto.jpg}
+\caption{Diagramma WBS}
+\label{fig:Diagramma WBS}
+\end{figure}
 
 \subsubsection{WBS-Primo Livello}
 \paragraph{Definizione Concept (1.1)}
-È la prima fase del progetto, dove si raccolgono le idee per portare alla nascita e alla definizione del progetto.\\
-A partire da questo momento in poi si penserà alla forma che assumerà il prodotto finale, alla  definizione delle caratteristiche più importanti (target del prodotto, come si intende erogare il servizio) e alla definizione delle funzionalità principali che il prodotto finale deve avere.
+\`{e} la prima fase del progetto, dove si raccolgono le idee per portare alla nascita e alla definizione del progetto.\\
+A partire da questo momento in poi si penser\`{a} alla forma che assumer\`{a} il prodotto finale, alla  definizione delle caratteristiche pi\`{u} importanti (target del prodotto, come si intende erogare il servizio) e alla definizione delle funzionalit\`{a} principali che il prodotto finale deve avere.
 
-\paragraph{Studio Fattibilità (1.2)}
-È la fase successiva a quella di Definizione Concept, ha lo scopo di capire se quello che si vuole realizzare è innanzitutto fattibile e possa portare ad avere dei guadagni concreti.\\
-Dunque il concept viene valutato sotto tutti i punti di vista e di interesse per l'organizzazione, al fine di avere un insieme di conclusioni e indicazioni sulle possibilità di buona riuscita del lavoro.
+\paragraph{Studio Fattibilit\`{a} (1.2)}
+\`{e} la fase successiva a quella di Definizione Concept, ha lo scopo di capire se quello che si vuole realizzare \`{e} innanzitutto fattibile e possa portare ad avere dei guadagni concreti.\\
+Dunque il concept viene valutato sotto tutti i punti di vista e di interesse per l'organizzazione, al fine di avere un insieme di conclusioni e indicazioni sulle possibilit\`{a} di buona riuscita del lavoro.
 
 \paragraph{Pianificazione (1.3)}
-In questa fase si vogliono studiare i processi che il team vuole adottare, quindi una pianificazione delle attività inerenti il ciclo di vita del prodotto avvalendosi di strumenti come diagrammi di Gantt, WBS, OBS e altri strumenti consultabili alla sezione Pianificazione. In questa fase si vogliono definire anche gli obiettivi e le strategie al fine di stabilire a priori ciò che il team dovrà controllare e soprattutto misurare.
+In questa fase si vogliono studiare i processi che il team vuole adottare, quindi una pianificazione delle attivit\`{a} inerenti il ciclo di vita del prodotto avvalendosi di strumenti come diagrammi di Gantt, WBS, OBS e altri strumenti consultabili alla sezione Pianificazione. In questa fase si vogliono definire anche gli obiettivi e le strategie al fine di stabilire a priori ci\`{o} che il team dovr\`{a} controllare e soprattutto misurare.
 
 \paragraph{Analisi e Progettazione (1.4)}
 A questo punto gli obiettivi del progetto sono chiari, bisogna dunque formalizzarli e chiarirli in maniera non ambigua.\\
-Vengono illustrate dettagliatamente le funzionalità, i servizi e le prestazioni che dovranno essere offerte dal prodotto finito.\\
-Infine viene progettato come il prodotto soddisferà i requisiti definiti in precedenza, definendone la struttura ed architettura da assumere e rispettare.
+Vengono illustrate dettagliatamente le funzionalit\`{a}, i servizi e le prestazioni che dovranno essere offerte dal prodotto finito.\\
+Infine viene progettato come il prodotto soddisfer\`{a} i requisiti definiti in precedenza, definendone la struttura ed architettura da assumere e rispettare.
 
 \paragraph{Sviluppo (1.5)}
 In questa fase si passa alla creazione vera e propria del prodotto software mediante la codifica di quanto definito durante la progettazione.\\
-Affinché questo risulti possibile è essenziale che ogni membro si attenga strettamente a quanto descritto nei documenti che gli vengono forniti.\\
-Non deve, assolutamente, inserire della creatività personale, in quanto il suo compito consiste nella traduzione in codice di quanto deciso precedentemente.\\
-Il codice prodotto dovrà essere costantemente verificato, per avere la sicurezza e la certezza che rispetti i requisiti di qualità definiti nella fase di pianificazione, accompagnato dall'appropriata manualistica.
+Affinché questo risulti possibile \`{e} essenziale che ogni membro si attenga strettamente a quanto descritto nei documenti che gli vengono forniti.\\
+Non deve, assolutamente, inserire della creativit\`{a} personale, in quanto il suo compito consiste nella traduzione in codice di quanto deciso precedentemente.\\
+Il codice prodotto dovr\`{a} essere costantemente verificato, per avere la sicurezza e la certezza che rispetti i requisiti di qualit\`{a} definiti nella fase di pianificazione, accompagnato dall'appropriata manualistica.
 
 \paragraph{Test (1.6)}
 Arrivati a questo punto vengono dunque effettuati i test delle componenti prodotte, verificando come si relazionano tra di loro, a partire dalle componenti di base del prodotto per arrivare a testare, alla fine, il sistema completo.\\
-Inoltre viene verificato che quanto è stato prodotto sia conforme agli obiettivi e ai requisiti che si erano definiti in precedenza.
+Inoltre viene verificato che quanto \`{e} stato prodotto sia conforme agli obiettivi e ai requisiti che si erano definiti in precedenza.
 
 \paragraph{Post vendita (1.7)}
-Una volta che il software prodotto è terminato e rispetta gli obiettivi ed i requisiti, viene avviato il piano per il rilascio.\\
-In questa fase è prevista la realizzazione di documentazione a supporto dell'utente finale ed eventuali attività di manutenzione o comunque di supporto all'utente finale.\\
+Una volta che il software prodotto \`{e} terminato e rispetta gli obiettivi ed i requisiti, viene avviato il piano per il rilascio.\\
+In questa fase \`{e} prevista la realizzazione di documentazione a supporto dell'utente finale ed eventuali attivit\`{a} di manutenzione o comunque di supporto all'utente finale.\\
 
 \paragraph{Commercializzazione (1.8)}
-Questa fase è stata pianificata al fine di definire come la società intende promuovere il proprio prodotto, ricercare eventuali partnership.
+Questa fase \`{e} stata pianificata al fine di definire come la societ\`{a} intende promuovere il proprio prodotto, ricercare eventuali partnership.
 
 \subsubsection {WBS-Secondo livello}
-Per la descrizione dei Work Package di secondo livello verrà utilizzato il seguente schema in quanto, fatta eccezione per il WP %TODO manca numero work package
-, rappresentano tutti insiemi di attività elementari da realizzare:
+Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il seguente schema in quanto,
+, rappresentano tutti insiemi di attivit\`{a} elementari da realizzare:
 \begin{description}
-\item[Descrizione:] descrizione generica su ciò che il WP si propone di fare.
-\item[Responsabile:] persona che ha la responsabilità delle attività da svolgere nel WP e dell'output finale.
-\item[Input:] Ciò di cui necessita in ingresso il WP per iniziare a svolgere le sue attività. Solitamente questi input vengono forniti in uscita da altri WP e possono essere prototipi, documenti o risorse.
-\item[Output:] ciò che il WP deve produrre in uscita. I tipi di uscita possono essere diversi, a seconda delle attività svolte.
-\item[Attività:] lista delle attività elementari necessarie al completamento del WP. Per poter essere considerato concluso un WP devono essere concluse tutte le sue attività.
+\item[Descrizione:] descrizione generica su ci\`{o} che il WP si propone di fare.
+\item[Responsabile:] persona che ha la responsabilit\`{a} delle attivit\`{a} da svolgere nel WP e dell'output finale.
+\item[Input:] Ci\`{o} di cui necessita in ingresso il WP per iniziare a svolgere le sue attivit\`{a}. Solitamente questi input vengono forniti in uscita da altri WP e possono essere prototipi, documenti o risorse.
+\item[Output:] ci\`{o} che il WP deve produrre in uscita. I tipi di uscita possono essere diversi, a seconda delle attivit\`{a} svolte.
+\item[Attivit\`{a}:] lista delle attivit\`{a} elementari necessarie al completamento del WP. Per poter essere considerato concluso un WP devono essere concluse tutte le sue attivit\`{a}.
 \item[Costo:] costo in euro riassuntivo di tutte le spese necessarie al compimento del WP. Andranno considerate le spese relative al consumo di tutte le risorse utilizzate.
 \item[Tempi di realizzazione:] tempo necessario stimato per la buona riuscita e per il completamento del WP, espresso in giorni lavorativi.
 \end{description}
@@ -58,10 +65,10 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:]
 \item[Input:] idee, critiche e specifiche provenienti da un brainstorming di gruppo.
 \item[Output:] documento formale che descrive una prima versione della specifica del prodotto, nella quale si definisce dettagliatamente l'idea che si vuole realizzare.
-\item[Attività:]
+\item[Attivit\`{a}:]
 \begin{center}
 \begin{itemize}
-\item ricerca nel web di eventuali competitors per ricavare da progetti già esistenti quali funzionalità è bene riproporre, quali no e quali sono quelle innovative che bisogna sviluppare;
+\item ricerca nel web di eventuali competitors per ricavare da progetti gi\`{a} esistenti quali funzionalit\`{a} \`{e} bene riproporre, quali no e quali sono quelle innovative che bisogna sviluppare;
 \item brainstorming tra le risorse umane assegnate al WP per identificare caratteristiche da implementare nel prodotto;
 \item prima stesura documento;
 \item verifica documento ed eventuali correzioni;
@@ -73,17 +80,17 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
-\paragraph{Definizione delle funzionalità d'uso (1.1.2)}
+\paragraph{Definizione delle funzionalit\`{a} d'uso (1.1.2)}
 \begin{description}
-\item[Descrizione:] definizione dettagliata delle più importanti funzionalità che si vuole siano presenti all'interno del software.
+\item[Descrizione:] definizione dettagliata delle pi\`{u} importanti funzionalit\`{a} che si vuole siano presenti all'interno del software.
 \item[Responsabile:]
 \item[Input:] documento di specifiche di massima prodotto dal WP.
-\item[Output:] documento che descrive nel dettaglio le funzionalità base che si è deciso di sviluppare.
-\item[Attività:]
+\item[Output:] documento che descrive nel dettaglio le funzionalit\`{a} base che si \`{e} deciso di sviluppare.
+\item[Attivit\`{a}:]
 \begin{center}
 \begin{itemize}
 \item studio del documento prodotto dal WP;
-\item analisi tecnica di sistemi simili già esistenti;
+\item analisi tecnica di sistemi simili gi\`{a} esistenti;
 \item prima stesura del documento;
 \item verifica del documento ed eventuali correzioni;
 \item formalizzazione del documento;
@@ -98,9 +105,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \begin{description}
 \item[Descrizione:] ricerca mirata di eventuali innovazioni tecnologie presenti nel mercato che possano risultare utili allo sviluppo del software.
 \item[Responsabile:]
-\item[Input:] documento di specifiche di funzionalità prodotto dal WP.
+\item[Input:] documento di specifiche di funzionalit\`{a} prodotto dal WP.
 \item[Output:] documento che descrive nel dettaglio eventuali nuove tecnologie interessanti che potrebbero essere inserite nel progetto. Per ciascuna di queste viene riportata una stima di tempo che si presuppone sia necessario ai programmatori per arrivare ad averne una buona padronanza.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio del documento prodotto dal WP;
@@ -111,17 +118,17 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item approvazione.
 \end{itemize}
 \end{center}
-\item[Costo:] 558 \euro{}.
+\item[Costo:] 279 \euro{}.
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
-\paragraph{Fattibilità tecnica (1.2.1)}
+\paragraph{Fattibilit\`{a} tecnica (1.2.1)}
 \begin{description}
 \item[Descrizione:] fase di valutazione del prodotto che si vuole realizzare dal punto di vista tecnico-tecnologico.
 \item[Responsabile:] 
 \item[Input:] tutti i documenti prodotti dal secondo livello del WP.
-\item[Output:] documento che descrive nel dettaglio, in modo non ambiguo, la fattibilità tecnica per il prodotto che si vuole realizzare indicando le tecnologie e gli strumenti necessari per farlo.
-\item[Attività:] 
+\item[Output:] documento che descrive nel dettaglio, in modo non ambiguo, la fattibilit\`{a} tecnica per il prodotto che si vuole realizzare indicando le tecnologie e gli strumenti necessari per farlo.
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio dei documenti prodotti dai WP;
@@ -138,13 +145,13 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
-\paragraph{Fattibilità marketing (1.2.2)}
+\paragraph{Fattibilit\`{a} marketing (1.2.2)}
 \begin{description}
-\item[Descrizione:] fase di analisi del mercato per studiare la concorrenza dovuta ad idee similari. Seguono quindi una stima ed una analisi della redditività del prodotto e alle indicazioni preliminari su come pubblicizzarlo e rilasciarlo al fine di ottenere maggiori introiti dalla vendita.
+\item[Descrizione:] fase di analisi del mercato per studiare la concorrenza dovuta ad idee similari. Seguono quindi una stima ed una analisi della redditivit\`{a} del prodotto e alle indicazioni preliminari su come pubblicizzarlo e rilasciarlo al fine di ottenere maggiori introiti dalla vendita.
 \item[Responsabile:] 
 \item[Input:] ricerche di mercato e dati riguardanti eventuali competitor.
-\item[Output:] documento formale che indica la fattibilità dal punto di vista del marketing. Nel caso di una buona riuscita sono riportate anche le azioni da seguire per il rilascio del prodotto.
-\item[Attività:] 
+\item[Output:] documento formale che indica la fattibilit\`{a} dal punto di vista del marketing. Nel caso di una buona riuscita sono riportate anche le azioni da seguire per il rilascio del prodotto.
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item analisi di mercato;
@@ -160,13 +167,13 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
-\paragraph{Fattibilità legale (1.2.3)}
+\paragraph{Fattibilit\`{a} legale (1.2.3)}
 \begin{description}
-\item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto legale. Si studiano e si definiscono le strategie eventuali da adottare in difesa del progetto. Si verifica inoltre la possibilità di brevettare il prodotto e di registrare un marchio. Infine si verifica che lo sviluppo non porti alla violazione di alcuna legge o normativa in vigore.
+\item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto legale. Si studiano e si definiscono le strategie eventuali da adottare in difesa del progetto. Si verifica inoltre la possibilit\`{a} di brevettare il prodotto e di registrare un marchio. Infine si verifica che lo sviluppo non porti alla violazione di alcuna legge o normativa in vigore.
 \item[Responsabile:]
 \item[Input:] conoscenza di eventuali prodotti simili nel mercato e normative/vincoli legali.
-\item[Output:] documento formale che indica la fattibilità dal punto di vista legale. Se viene prevista una buona riuscita allora sono riportate anche le azioni da seguire per il corretto rilascio del prodotto.
-\item[Attività:] 
+\item[Output:] documento formale che indica la fattibilit\`{a} dal punto di vista legale. Se viene prevista una buona riuscita allora sono riportate anche le azioni da seguire per il corretto rilascio del prodotto.
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item definizione di un marchio;
@@ -177,17 +184,17 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item approvazione;
 \end{itemize}
 \end{center}
-\item[Costo:] 315 \euro{}.
+\item[Costo:] 315 \euro{}
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
-\paragraph{Fattibilità Economica (1.2.4)}
+\paragraph{Fattibilit\`{a} Economica (1.2.4)}
 \begin{description}
-\item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto economico. Si studia e si valutano i benefici economici che tale progetto potrebbe portare. Vengono stimati inoltre i costi che l'organizzazione dovrebbe sostenere, diretti ed indiretti. Inoltre viene studiata la possibilità di ottenere dei finanziamenti esterni 
+\item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto economico. Si studia e si valutano i benefici economici che tale progetto potrebbe portare. Vengono stimati inoltre i costi che l'organizzazione dovrebbe sostenere, diretti ed indiretti. Inoltre viene studiata la possibilit\`{a} di ottenere dei finanziamenti esterni 
 \item[Responsabile:] 
 \item[Input:] conoscenza dei costi diretti ed indiretti delle varie risorse.
-\item[Output:] documento formale che indica la fattibilità dal punto di vista economico. All'interno di questo verrà illustrata la previsione economica del prodotto, illustrando i possibili guadagni ed indicando l'eventuale punto di pareggio.
-\item[Attività:] 
+\item[Output:] documento formale che indica la fattibilit\`{a} dal punto di vista economico. All'interno di questo verr\`{a} illustrata la previsione economica del prodotto, illustrando i possibili guadagni ed indicando l'eventuale punto di pareggio.
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item consulenze economiche;
@@ -199,21 +206,21 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item approvazione;
 \end{itemize}
 \end{center}
-\item[Costo:] 265 \euro.
+\item[Costo:] 265 \euro{}
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
-\paragraph{Pianificazione qualità del prodotto (1.3.1)}
+\paragraph{Pianificazione qualit\`{a} del prodotto (1.3.1)}
 \begin{description}
-\item[Descrizione:] fase di identificazione e definizione degli standard da seguire allo scopo di garantire qualità al prodotto. Identificazione delle strategie di controllo da utilizzare per aggiungere qualità al prodotto.
+\item[Descrizione:] fase di identificazione e definizione degli standard da seguire allo scopo di garantire qualit\`{a} al prodotto. Identificazione delle strategie di controllo da utilizzare per aggiungere qualit\`{a} al prodotto.
 \item[Responsabile:] 
-\item[Input:] politiche e standard di qualità, esperienze passate degli analisti.
-\item[Output:] documenti formali, Piano di Qualifica e Norme di Progetto, che illustrano gli standard e le strategie da seguire per aggiungere qualità al prodotto.
-\item[Attività:] 
+\item[Input:] politiche e standard di qualit\`{a}, esperienze passate degli analisti.
+\item[Output:] documenti formali, Piano di Qualifica e Norme di Progetto, che illustrano gli standard e le strategie da seguire per aggiungere qualit\`{a} al prodotto.
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio degli standard esistenti;
-\item definizione degli obiettivi di qualità;
+\item definizione degli obiettivi di qualit\`{a};
 \item pianificazione adattamento standard al progetto;
 \item definizione delle strategie di verifica e validazione del software;
 \item definizione delle norme di progetto;
@@ -230,11 +237,11 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 
 \paragraph{Analisi dei rischi (1.3.2)}
 \begin{description}
-\item[Descrizione:] fase di analisi dei rischi riguardanti lo sviluppo del prodotto software. Si studia e si definiscono quali sono i rischi in cui si può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomeno gestire.
+\item[Descrizione:] fase di analisi dei rischi riguardanti lo sviluppo del prodotto software. Si studia e si definiscono quali sono i rischi in cui si pu\`{o} incombere durante tutte la fasi di sviluppo, cos\`{i} da poterli evitare o quantomeno gestire.
 \item[Responsabile:] 
 \item[Input:] esperienze personali, conoscenze di rischi noti e documenti prodotti all'interno del WP.
 \item[Output:] documento formale che indica gli eventuali rischi che si possono verificare durante le varie fasi di sviluppo del progetto.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item identificazione dei rischi noti;
@@ -252,17 +259,17 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 
 \paragraph{Pianificazione del lavoro (1.3.3)}
 \begin{description}
-\item[Descrizione:] fase in cui viene definita la programmazione delle attività necessarie allo svolgimento del progetto.
+\item[Descrizione:] fase in cui viene definita la programmazione delle attivit\`{a} necessarie allo svolgimento del progetto.
 \item[Responsabile:] 
-\item[Input:] esperienze personali, specifiche di massima, analisi di fattibilità.
+\item[Input:] esperienze personali, specifiche di massima, analisi di fattibilit\`{a}.
 \item[Output:] WBS,OBS,RBS, diagramma di Gantt.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
-\item decisione del livello di profondità del WBS;
-\item definizione delle attività;
+\item decisione del livello di profondit\`{a} del WBS;
+\item definizione delle attivit\`{a};
 \item identificazione dei ruoli necessari per lo svolgimento del progetto;
-\item assegnazione dei ruoli alle attività;
+\item assegnazione dei ruoli alle attivit\`{a};
 \end{itemize}
 \end{center}
 \item[Costo:] 525 \euro{}.
@@ -271,11 +278,11 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 
 \paragraph{Definizione dei casi d'uso (1.4.1)}
 \begin{description}
-\item[Descrizione:]fase di definizione finale delle funzionalità del prodotto. Si determina in modo non ambiguo quali saranno le caratteristiche del software e come gli utenti potranno interagire con esso. Successivamente si effettua un'analisi dei rischi sul piano dello sviluppo del software, si studia e si definiscono quali sono i rischi nei quali si può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomeno gestire.
+\item[Descrizione:]fase di definizione finale delle funzionalit\`{a} del prodotto. Si determina in modo non ambiguo quali saranno le caratteristiche del software e come gli utenti potranno interagire con esso. Successivamente si effettua un'analisi dei rischi sul piano dello sviluppo del software, si studia e si definiscono quali sono i rischi nei quali si pu\`{o} incombere durante tutte la fasi di sviluppo, cos\`{i} da poterli evitare o quantomeno gestire.
 \item[Responsabile:] 
 \item[Input: ]documentazione prodotta nei WP precedenti ed esperienza personale degli analisti.
-\item[Output:] documento formale che illustra chiaramente ed in modo formale le funzionalità definitive del prodotto finale e come sarà possibile per gli utenti interagire con esso.
-\item[Attività:] 
+\item[Output:] documento formale che illustra chiaramente ed in modo formale le funzionalit\`{a} definitive del prodotto finale e come sar\`{a} possibile per gli utenti interagire con esso.
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio dei documenti in input;
@@ -297,7 +304,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] documentazione prodotta nei WP precedenti ed esperienza personale degli analisti.
 \item[Output:] documento formale ad uso esterno Analisi dei Requisiti.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio dei documenti in input;
@@ -315,17 +322,17 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \paragraph{Progettazione di alto livello (1.4.3)}
 \begin{description}
 \item[Descrizione:] fase in cui si procede con la definizione dell'architettura del prodotto utilizzando componenti con
-specifica chiara, coesa e nei principi di qualità fissati a priori.
+specifica chiara, coesa e nei principi di qualit\`{a} fissati a priori.
 \item[Responsabile:] 
 \item[Input:] analisi dei requisiti, sistemi aziendali ed eventualmente componenti esistenti.
 \item[Output:] documento di specifica tecnica del prodotto che riassume l'architettura generale ed ad
 alto livello del software.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item incontri tra progettisti e analisti;
 \item analisi di componenti e sistemi esistenti;
-\item valutazione di essi per opportunità di riuso;
+\item valutazione di essi per opportunit\`{a} di riuso;
 \item identificazione componenti fondamentali;
 \item individuare le tecnologie e le tecniche da utilizzare;
 \item prima bozza di documenti e schemi, revisione, approvazione, formalizzazione finale.
@@ -337,18 +344,18 @@ alto livello del software.
 
 \paragraph{Progettazione di dettaglio (1.4.4)}
 \begin{description}
-\item[Descrizione:] fase in cui si procede con la definizionedelle unità realizzative cioè moduli la cui complessità deve essere ridotta al minimo indispensabile al fine di permettere la realizzazione del modulo al singolo programmatore.
+\item[Descrizione:] fase in cui si procede con la definizionedelle unit\`{a} realizzative cio\`{e} moduli la cui complessit\`{a} deve essere ridotta al minimo indispensabile al fine di permettere la realizzazione del modulo al singolo programmatore.
 \item[Responsabile:] 
 \item[Input:] analisi dei requisiti, specifica tecnica.
-\item[Output:] documento di definizione del prodotto che descriva con linguaggio UML2.0 schemi e diagrammi di tutte le unità che devono essere realizzate.
-\item[Attività:] 
+\item[Output:] documento di definizione del prodotto che descriva con linguaggio UML2.0 schemi e diagrammi di tutte le unit\`{a} che devono essere realizzate.
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item definizione e specifica dei moduli da realizzare
-\item raggruppare moduli in unità mantenendo basso accoppiamento e elevata coesione
-\item assegnare le unità ai componenti
+\item raggruppare moduli in unit\`{a} mantenendo basso accoppiamento e elevata coesione
+\item assegnare le unit\`{a} ai componenti
 \item tracciamento componenti- requisiti
-\item stabilire i test di unità
+\item stabilire i test di unit\`{a}
 \item prima stesura del documento, revisione, approvazione, formalizzazione finale.
 \end{itemize}
 \end{center}
@@ -362,11 +369,11 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] specifica tecnica, definizione di prodotto.
 \item[Output:] documento con scopo documentale della codifica del software.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio documenti in input;
-\item stesura documentazione per ogni singola unità;
+\item stesura documentazione per ogni singola unit\`{a};
 \item verifica documento ed eventuali correzioni;
 \item formalizzazione documento;
 \item approvazione;
@@ -382,13 +389,13 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto, Piano di Qualifica ed altra documentazione tecnica.
 \item[Output:]database realizzato e pienamente funzionante.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio dei documenti in input;
 \item fase di codifica;
-\item verifica del codice e delle funzionalità del database;
-\item verifica della qualità;
+\item verifica del codice e delle funzionalit\`{a} del database;
+\item verifica della qualit\`{a};
 \item approvazione;
 \end{itemize}
 \end{center}
@@ -402,13 +409,13 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto, Piano di Qualifica ed altra documentazione tecnica.
 \item[Output:] codice dell'applicativo.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio dei documenti in input;
 \item fase di codifica;
 \item verifica del codice;
-\item verifica della qualità;
+\item verifica della qualit\`{a};
 \item approvazione;
 \end{itemize}
 \end{center}
@@ -416,13 +423,13 @@ alto livello del software.
 \item[Tempi di realizzazione:] 21 giorni lavorativi.
 \end{description}
 
-\paragraph{Test di unità (1.6.1)}
+\paragraph{Test di unit\`{a} (1.6.1)}
 \begin{description}
-\item[Descrizione:] fase di test di tutte le singole unità software prodotte.
+\item[Descrizione:] fase di test di tutte le singole unit\`{a} software prodotte.
 \item[Responsabile:] 
 \item[Input:] metodi pianificati nell'architettura di dettaglio del prodotto.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio documento in input;
@@ -441,11 +448,11 @@ alto livello del software.
 
 \paragraph{Test di integrazione (1.6.2)}
 \begin{description}
-\item[Descrizione:] fase di test delle singole funzionalità del prodotto, si tratta di una verifica in primis dei flussi di dati in entrata e in uscita tra le varie componenti realizzate e infine nella verifica dei flusso di controllo tra le componenti.
+\item[Descrizione:] fase di test delle singole funzionalit\`{a} del prodotto, si tratta di una verifica in primis dei flussi di dati in entrata e in uscita tra le varie componenti realizzate e infine nella verifica dei flusso di controllo tra le componenti.
 \item[Responsabile:] 
 \item[Input:] componenti pianificati nella specifica tecnica del prodotto (progettazione di alto livello).
 \item[Output:] documento riassuntivo dei risultati ottenuti dalla batteria di test realizzati.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio documento in input;
@@ -464,14 +471,14 @@ alto livello del software.
 
 \paragraph{Test di sistema (1.6.3)}  
 \begin{description}
-\item[Descrizione:] fase di test sulle interazioni fra le singole unità. Si verifica che i comportamenti in seguito alle comunicazioni fra di queste siano quelli previsti. Queste fase ha lo scopo principale di effettuare un collaudo interno al fine di compiere eventuali correzioni onde evitare malfunzionamenti per il collaudo finale del prodotto.
+\item[Descrizione:] fase di test sulle interazioni fra le singole unit\`{a}. Si verifica che i comportamenti in seguito alle comunicazioni fra di queste siano quelli previsti. Queste fase ha lo scopo principale di effettuare un collaudo interno al fine di compiere eventuali correzioni onde evitare malfunzionamenti per il collaudo finale del prodotto.
 \item[Responsabile:] 
-\item[Input:] interfaccia grafica e Piano di Qualifica, documento riassuntivo test di unità.
+\item[Input:] interfaccia grafica e Piano di Qualifica, documento riassuntivo test di unit\`{a}.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test di integrazione.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
-\item studio documento Piano di Qualifica e accertamento risultati test di unità;
+\item studio documento Piano di Qualifica e accertamento risultati test di unit\`{a};
 \item esecuzione dei test;
 \item risoluzione eventuali errori rilevati;
 \item approvazione dei test;
@@ -487,11 +494,11 @@ alto livello del software.
 
 \paragraph{Collaudo finale (1.6.4)}
 \begin{description}
-\item[Descrizione:] fase di test dell'intero sistema da effettuare prima del rilascio. Si cercano eventuali errori o malfunzionamenti e successivamente si certifica che tutte le funzionalità dichiarate siano presenti.
+\item[Descrizione:] fase di test dell'intero sistema da effettuare prima del rilascio. Si cercano eventuali errori o malfunzionamenti e successivamente si certifica che tutte le funzionalit\`{a} dichiarate siano presenti.
 \item[Responsabile:] 
 \item[Input:] interfaccia grafica, esito dei vari test, Piano di Qualifica e Analisi Dei Requisiti.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test e dal controllo dei requisiti.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item studio documenti in input;
@@ -511,14 +518,14 @@ alto livello del software.
 
 \paragraph{Manuali Utente (1.7.1)}
 \begin{description}
-\item[Descrizione:] realizzazione dei manuali utente per il supporto all'utente all'uso dell'interfaccia. Il manuale illustra le funzionalità del prodotto, il suo utilizzo e l'esposizione di problemi con le possibili soluzioni.
+\item[Descrizione:] realizzazione dei manuali utente per il supporto all'utente all'uso dell'interfaccia. Il manuale illustra le funzionalit\`{a} del prodotto, il suo utilizzo e l'esposizione di problemi con le possibili soluzioni.
 \item[Responsabile:] 
 \item[Input:] interfaccia prodotto.
 \item[Output:] documento con lo scopo di fornire un supporto agli utenti dopo il rilascio.
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
-\item studio delle funzionalità del software;
+\item studio delle funzionalit\`{a} del software;
 \item prima realizzazione manuale;
 \item verifica documento ed eventuali correzioni;
 \item formalizzazione documento;
@@ -536,10 +543,10 @@ possibili bug del prodotto e problemi che si possono verificare con i clienti e 
 \item[Responsabile:] 
 \item[Input:] problema riguardante il software.
 \item[Output:] rilascio nuova versione, relazioni sui problemi incontrati e sulle soluzioni,
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
-\item il servizio clienti è in contatto con il cliente per rilevare la
+\item il servizio clienti \`{e} in contatto con il cliente per rilevare la
 soddisfazione del prodotto tramite interviste e questionari per fornire assistenza;
 \item progettisti e programmatori lavorano per risolvere eventuali problemi individuati;
 \end{itemize}
@@ -550,15 +557,15 @@ soddisfazione del prodotto tramite interviste e questionari per fornire assisten
 
 \paragraph{Promozione del prodotto (1.8.1)}
 \begin{description}
-\item[Descrizione:] fase di promozione del prodotto realizzato. Si punta a pubblicizzare il prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a creare un brand.
+\item[Descrizione:] fase di promozione del prodotto realizzato. Si punta a pubblicizzare il prodotto con lo scopo di raggiungere quanti pi\`{u} clienti possibili iniziando a creare un brand.
 \item[Responsabile:] 
 \item[Input:] alcune conoscenze di marketing e target clienti.
-\item[Output:] slogan, pubblicità scelte di mercato da intraprendere.
-\item[Attività:] 
+\item[Output:] slogan, pubblicit\`{a} scelte di mercato da intraprendere.
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
 \item ricerca possibili clienti;
-\item pubblicità rivolta alla categorie di clienti scelti;
+\item pubblicit\`{a} rivolta alla categorie di clienti scelti;
 \end{itemize}
 \end{center}
 \item[Costo:] 730 \euro{}.
@@ -567,14 +574,14 @@ soddisfazione del prodotto tramite interviste e questionari per fornire assisten
 
 \paragraph{Presentazione del prodotto (1.8.2)}
 \begin{description}
-\item[Descrizione:] il prodotto software verrà presentato in opportuni incontri con dei potenziali clienti al fine di dimostrare l'utilità del prodotto.
+\item[Descrizione:] il prodotto software verr\`{a} presentato in opportuni incontri con dei potenziali clienti al fine di dimostrare l'utilit\`{a} del prodotto.
 \item[Responsabile:] 
 \item[Input:] software completato.
 \item[Output:] incremento delle conoscenze del prodotto stesso e del team a possibili acquirenti e investitori. 
-\item[Attività:] 
+\item[Attivit\`{a}:] 
 \begin{center}
 \begin{itemize}
-\item dimostrazione dell'utilità del prodotto;
+\item dimostrazione dell'utilit\`{a} del prodotto;
 \item raccolta feedback.
 \end{itemize}
 \end{center}
